# Igor

./: .gitignore  README.md
hs/: Igor.hs  build-byte-dist.hs  discover-gadgets-test.hs  discover-gadgets.hs  igor-test.hs  igor.cabal  igor.hs  random-disas-disassmbler.hs  random-disas-hdis.hs  random-disas.hs
hs/Igor/: Binary.hs  ByteModel.hs  CodeGen.hs  DSL.hs  Derive.hs  Eval.hs  Expr.hs  Gadget.hs
hs/Igor/CodeGen/: GCC.hs
hs/Igor/Gadget/: Discovery.hs
hs/discover-gadgets/: discover-gadgets-test.hs  discover-gadgets.hs
hs/tests/: factorial.c  factorial.hs  igor-test.hs  xor.hs
paper/: Makefile  abstract.tex  acknowledgment.tex  annbib.bib  annbib.tex  appendix_test_programs.tex  chapter_conclusion.tex  chapter_intro.tex  chapter_method.tex  chapter_related.tex  chapter_results.tex  draft.tex  ext-abstract.tex  lit-review.tex  paper.tex  results.tex  srpaper.cls
random-disas/: Makefile  errors.h  eval.c  eval.h  eval_macros.h  expr.c  expr.h  match.c  match.h  rdis.c
src/: Igor.hs  igor.cabal
src/Igor/: ByteModel.hs  CodeGen.hs  Eval.hs  Gadget.hs
src/build-byte-dist/: build-byte-dist.hs
src/discover-gadgets/: discover-gadgets-test.hs  discover-gadgets.hs
src/eval/: chi-squared.hs  gather-stats.pl  gen-all.pl  gen-samples.pl  lcs.hs
src/tests/: max.c  max.hs  xor.c  xor.hs
