Name:               igor
Version:            0.0.1
Cabal-version:      >= 1.2
Build-type:         Simple
Copyright:          (c) 2012-2013 Will Coster
Author:             Will Coster
Maintainer:         willcoster@gmail.com
Stability:          experimental
Homepage:           https://github.com/fimad/senior-project
Synopsis:           An open source metamorphic library.

Description:
    An open source metamorphic library implementing the technique first
    described in "Frankenstein: Stitching Malware from Benign Binaries".

Library
    ghc-options: -O2 -threaded
    Extensions:     RecordWildCards
    Exposed-Modules:
        Igor
        Igor.ByteModel
        Igor.CodeGen
        Igor.CodeGen.GCC
        Igor.Derive
        Igor.Expr
        Igor.Eval
        Igor.Gadget
        Igor.Gadget.Discovery
    Build-Depends:
            base                    >= 2.0
        ,   binary                  >= 0.5.1.1
        ,   bytestring              >= 0.9.2.1
        ,   deepseq                 >= 1.3
        ,   containers              >= 0.4.2.1
        ,   enumerator              >= 0.4
        ,   filesystem-enumerator   >= 0.1
        ,   hashmap                 >= 1.3
        ,   directory               >= 1.1.0.2
        ,   derive                  >= 2.5.11
        ,   hdis86                  >= 0.2
        ,   IntervalMap             >= 0.3
        ,   mtl                     >= 2.0.1
        ,   random                  >= 1.0.1.1
        ,   random-fu               >= 0.2.4
        ,   random-source           >= 0.3
        ,   system-filepath         >= 0.4.7
        ,   text                    >= 0.11
        ,   transformers            >= 0.2
        ,   zlib                    >= 0.5

Executable discover-gadgets
    ghc-options: -O2 -threaded
    Main-Is: discover-gadgets.hs

Executable discover-gadgets-test
    ghc-options: -O2 -threaded
    Main-Is: discover-gadgets-test.hs

Executable igor-test
    ghc-options: -O2 -threaded
    Main-Is: igor-test.hs

Executable build-byte-dist
    ghc-options: -O2 -threaded
    Main-Is: build-byte-dist.hs
