Name:               igor
Version:            0.0.1
Cabal-version:      >= 1.8
Build-type:         Simple
Copyright:          (c) 2012-2013 Will Coster
Author:             Will Coster
Maintainer:         willcoster@gmail.com
Stability:          experimental
Homepage:           https://github.com/fimad/senior-project
Synopsis:           An open source metamorphic library.

Description:
    An open source metamorphic library implementing the technique first
    described in "Frankenstein: Stitching Malware from Benign Binaries".

Library
    ghc-options: -O2 -threaded
    Extensions:     RecordWildCards
    Exposed-Modules:
        Igor
        Igor.ByteModel
        Igor.CodeGen
        Igor.CodeGen.GCC
        Igor.Expr
        Igor.Eval
        Igor.Gadget
        Igor.Gadget.Discovery
    Build-Depends:
            base                    >= 2.0
        ,   binary                  >= 0.5.1.1
        ,   bytestring              >= 0.9.2.1
        ,   containers              >= 0.4.2.1
        ,   deepseq                 >= 1.3
        ,   directory               >= 1.1.0.2
        ,   enumerator              >= 0.4
        ,   filesystem-enumerator   >= 0.1
        ,   filepath                >= 1.3
        ,   hashmap                 >= 1.3
        ,   derive                  >= 2.5.11
        ,   hdis86                  >= 0.2
        ,   IntervalMap             >= 0.3
        ,   mtl                     >= 2.0.1
        ,   process                 >= 1.1
        ,   random                  >= 1.0.1.1
        ,   random-fu               >= 0.2.4
        ,   random-source           >= 0.3
        ,   system-filepath         >= 0.4.7
        ,   temporary               >= 1.1
        ,   text                    >= 0.11
        ,   transformers            >= 0.2
        ,   zlib                    >= 0.5

Executable discover-gadgets
    ghc-options: -O2 -threaded
    Main-Is: discover-gadgets.hs
    Hs-Source-Dirs: discover-gadgets
    Build-Depends:
            base                    >= 2.0
        ,   binary                  >= 0.5.1.1
        ,   containers              >= 0.4.2.1
        ,   directory               >= 1.1.0.2
        ,   igor
        ,   random                  >= 1.0.1.1

Executable discover-gadgets-test
    ghc-options: -O2 -threaded
    Main-Is: discover-gadgets-test.hs
    Hs-Source-Dirs: discover-gadgets
    Build-Depends:
            base                    >= 2.0
        ,   containers              >= 0.4.2.1
        ,   hdis86                  >= 0.2
        ,   igor
        ,   random                  >= 1.0.1.1

Executable igor-test
    ghc-options: -O2 -threaded
    Main-Is: igor-test.hs
    Hs-Source-Dirs: tests
    Build-Depends:
            base                    >= 2.0
        ,   binary                  >= 0.5.1.1
        ,   bytestring              >= 0.9.2.1
        ,   hdis86                  >= 0.2
        ,   igor
        ,   random                  >= 1.0.1.1

Executable build-byte-dist
    ghc-options: -O2 -threaded
    Main-Is: build-byte-dist.hs
    Hs-Source-Dirs: build-byte-dist
    Build-Depends:
            base                    >= 2.0
        ,   binary                  >= 0.5.1.1
        ,   bytestring              >= 0.9.2.1
        ,   containers              >= 0.4.2.1
        ,   deepseq                 >= 1.3
        ,   derive
        ,   enumerator              >= 0.4
        ,   filesystem-enumerator   >= 0.1
        ,   hdis86                  >= 0.2
        ,   igor
        ,   pecoff                  >= 0.1
        ,   system-filepath         >= 0.4.7
        ,   text                    >= 0.11
        ,   transformers            >= 0.2


--------------------------------------------------------------------------------
-- Evaluation utilities
--------------------------------------------------------------------------------

Executable eval-chi-squared
    ghc-options: -O2 -threaded
    Main-Is: chi-squared.hs
    Hs-Source-Dirs: eval
    Build-Depends:
            base                    >= 2.0
        ,   binary                  >= 0.5.1.1
        ,   bytestring              >= 0.9.2.1
        ,   containers              >= 0.4.2.1
        ,   hdis86                  >= 0.2
        ,   igor
        ,   text                    >= 0.11

Executable eval-lcs
    ghc-options: -O2 -threaded
    Main-Is: lcs.hs
    Hs-Source-Dirs: eval
    Build-Depends:
            base                    >= 2.0
        ,   bytestring              >= 0.9.2.1
        ,   igor
        ,   hdis86                  >= 0.2
        ,   lcs                     >= 0.2
        ,   text                    >= 0.11


--------------------------------------------------------------------------------
-- Sample programs
--------------------------------------------------------------------------------

Executable xor-test
    ghc-options: -O2 -threaded
    Main-Is: xor.hs
    Hs-Source-Dirs: tests
    Build-Depends:
            base                    >= 2.0
        ,   igor

Executable factorial-test
    ghc-options: -O2 -threaded
    Main-Is: factorial.hs
    Hs-Source-Dirs: tests
    Build-Depends:
            base                    >= 2.0
        ,   igor

Executable max-test
    ghc-options: -O2 -threaded
    Main-Is: max.hs
    Hs-Source-Dirs: tests
    Build-Depends:
            base                    >= 2.0
        ,   igor

Executable sort-test
    ghc-options: -O2 -threaded
    Main-Is: sort.hs
    Hs-Source-Dirs: tests
    Build-Depends:
            base                    >= 2.0
        ,   igor
